added menu model and view

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-	  {{> menu}}
-    {{{body}}}
-  </body>
+
+<head>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+</head>
+
+<body>
+  {{> menu menu}}
+  {{{body}}}
+</body>
+
 </html>
