--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,10 +8,13 @@
 
 <body>
   {{> menu menu}}
+  {{> login page}}
+  {{#if page.status}}
   {{#if page.edit}}
-  {{> page_edit page.data}}
+  {{> page_edit page}}
   {{else}}
-  {{> page page.data}}
+  {{> page page}}
+  {{/if}}
   {{/if}}
   {{{body}}}
 </body>
